cleaned up Code